# interview_assistant

./: .env.example  BACKEND_CHANGES_SUMMARY.md  CHANGES_ANALYSIS.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DOCX_TXT_DEBUGGING.md  FINAL_SUMMARY.md  GEMINI_MIGRATION_SUMMARY.md  GOOGLE_GENAI_1.47.0_UPGRADE.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  MULTI_FORMAT_QUICK_GUIDE.md  MULTI_FORMAT_RESUME_SUPPORT.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SYSTEM_DIAGRAM.md  UV_MIGRATION.md  UV_SETUP.md  VISUAL_GUIDE_JD_UPLOAD.md  WEB_UI_README.md  WEB_UI_TESTING_GUIDE.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  setup.sh  test_docx_upload.py  test_gemini_integration.py  test_ui_workflow.md  verify_setup.py
app/: main.py  model.py
docs/: architecture.md  quickstart.md
examples/: sample_job_descriptions.py  usage_example.py  uv_script_example.py
src/: __init__.py  config.py
src/agent/: __init__.py  interview_agent.py
src/api/: __init__.py  main.py
src/models/: __init__.py
src/parsers/: __init__.py  resume_parser.py
src/prompts/: __init__.py  templates.py
static/css/: custom.css
static/js/: app.js
templates/: base.html  error.html  index.html
tests/: __init__.py  test_basic.py
